cloudformation & deploying i.e sls deploy

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "sls offline start --port 4500",
     "sls": "sls",
-    "list": "sls deploy list",
+    "deploy": "sls deploy",
+    "list": "sls deploy list functions",
     "local-fn-01": "sls invoke local -f hello",
     "local-fn-02": "sls invoke local -f helloworld",
     "fnevent": "sls invoke local -f fnevent -p src/event.json"
